-Имя файла  .bvr текущая дата -Добавлена синхронизация времени с компьютером

--- a/VR.STM32.V4/VR.STM32.V4.vcxproj
+++ b/VR.STM32.V4/VR.STM32.V4.vcxproj
@@ -118,6 +118,7 @@
     <ClInclude Include="Package.h" />
     <ClInclude Include="SdController.h" />
     <ClInclude Include="Settings.h" />
+    <ClInclude Include="SetupDateTime.h" />
     <ClInclude Include="__vm\.VR.STM32.V4.vsarduino.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
