--- a/VR.STM32.V4/VR.STM32.V4.vcxproj.filters
+++ b/VR.STM32.V4/VR.STM32.V4.vcxproj.filters
@@ -42,5 +42,8 @@
     <ClInclude Include="SetupDateTime.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PSP1N_V2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
