--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{9C5986BF-1EA8-4EB1-A395-15370D446E7F}</ProjectGuid>
-    <RootNamespace>VR_STM32_V2</RootNamespace>
-    <ProjectName>VR.STM32.V2</ProjectName>
+    <ProjectGuid>{FFEED010-3951-4A3A-83C6-6EAA6DD91DEF}</ProjectGuid>
+    <RootNamespace>Test</RootNamespace>
+    <ProjectName>Test</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -77,10 +77,10 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\VR.STM32.V2;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\libraries\SPI\src;C:\Users\Zagibatel\Documents\Arduino\libraries\SdFat\src;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\libraries\STM32ADC\src;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\libraries\STM32ADC\src\utility;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\libraries\RTClock\src;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\libraries\RTClock\src\utility;C:\Program Files (x86)\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\libraries;C:\Users\Zagibatel\Documents\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\cores\maple;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\cores\maple\avr;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\cores\maple\libmaple;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\cores\maple\stm32f1;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\variants\generic_stm32f103c;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\system\libmaple;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\system\libmaple\include;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\system\libmaple\stm32f1\include;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\system\libmaple\usb\stm32f1;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\system\libmaple\usb\usb_lib;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <ForcedIncludeFiles>$(ProjectDir)__vm\.VR.STM32.V2.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\Test;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\libraries\RTClock\src;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\libraries\STM32ADC\src;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\libraries\STM32ADC\src\utility;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\libraries\RTClock\src\utility;C:\Program Files (x86)\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\libraries;C:\Users\Zagibatel\Documents\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\cores\maple;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\cores\maple\avr;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\cores\maple\libmaple;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\cores\maple\stm32f1;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\variants\generic_stm32f103c;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\system\libmaple;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\system\libmaple\include;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\system\libmaple\stm32f1\include;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\system\libmaple\usb\stm32f1;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32\STM32F1\system\libmaple\usb\usb_lib;C:\Program Files (x86)\Arduino\hardware\Arduino_STM32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>$(ProjectDir)__vm\.Test.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>false</IgnoreStandardIncludePath>
-      <PreprocessorDefinitions>DEBUG_LEVEL=DEBUG_NONE;BOARD_generic_stm32f103c;VECT_TAB_ADDR=0x8000000;ERROR_LED_PORT=GPIOC;ERROR_LED_PIN=13;F_CPU=72000000L;ARDUINO=10809;ARDUINO_GENERIC_STM32F103C;ARDUINO_ARCH_STM32F1;CONFIG_MAPLE_MINI_NO_DISABLE_DEBUG=1;SERIAL_USB;GENERIC_BOOTLOADER;MCU_STM32F103C8;__STM32F1__;ARDUINO_ARCH_STM32;__cplusplus=201103L;_VMICRO_INTELLISENSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>DEBUG_LEVEL=DEBUG_NONE;BOARD_generic_stm32f103c;VECT_TAB_ADDR=0x8002000;ERROR_LED_PORT=GPIOC;ERROR_LED_PIN=13;F_CPU=72000000L;ARDUINO=10809;ARDUINO_GENERIC_STM32F103C;ARDUINO_ARCH_STM32F1;SERIAL_USB;GENERIC_BOOTLOADER;MCU_STM32F103C8;__STM32F1__;ARDUINO_ARCH_STM32;__cplusplus=201103L;_VMICRO_INTELLISENSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -107,25 +107,19 @@
     <DebuggerFlavor>VisualMicroDebugger</DebuggerFlavor>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="VR.STM32.V2.ino">
+    <None Include="Test.ino">
       <FileType>CppCode</FileType>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Buffer.h" />
-    <ClInclude Include="BufferController.h" />
-    <ClInclude Include="Package.h" />
-    <ClInclude Include="PSP1N.h" />
-    <ClInclude Include="SDController.h" />
-    <ClInclude Include="Settings.h" />
-    <ClInclude Include="__vm\.VR.STM32.V2.vsarduino.h" />
+    <ClInclude Include="__vm\.Test.vsarduino.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties arduino.upload.port="COM9" />
+      <UserProperties debug.remote.portname="Serial" debug.local.portname="COM11" custom_Arduino_STM32_genericSTM32F103C_opt="ogstd" arduino.upload.port="COM11" debug.view.DigitalPins="" custom_Arduino_STM32_genericSTM32F103C_upload_method="DFUUploadMethod" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
