--- a/VR.STM32.EMULATOR/VR.STM32.EMULATOR.vcxproj.filters
+++ b/VR.STM32.EMULATOR/VR.STM32.EMULATOR.vcxproj.filters
@@ -13,24 +13,21 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="PNG">
-      <UniqueIdentifier>{6676288a-b699-40f5-afbb-6f4971419a90}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="VR.STM32.V4.ino" />
+    <None Include="VR.STM32.EMULATOR.ino" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="__vm\.VR.STM32.EMULATOR.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Buffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Settings.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="__vm\.VR.STM32.V4.vsarduino.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Package.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PSP1N_V2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RingBuffer.h">
@@ -39,16 +36,11 @@
     <ClInclude Include="SdController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Settings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="SetupDateTime.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PSP1N_V2.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="shem.png">
-      <Filter>PNG</Filter>
-    </Image>
   </ItemGroup>
 </Project>
